fixed performance hud overlapping top hud

--- a/game/src/components/game/hud/debug/debug_huds.scss
+++ b/game/src/components/game/hud/debug/debug_huds.scss
@@ -3,6 +3,6 @@
 .hud-debug-performance {
     position: fixed;
     z-index: $z-index-hud;
-    top: 1em;
+    top: 2em;
     right: 1em;
 }
